--- a/llm_RLHF_part3.ipynb
+++ b/llm_RLHF_part3.ipynb
@@ -1,27 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "**tokenizer_bpe**"
-      ],
       "metadata": {
         "id": "3UJZnMdbJbOM"
-      }
+      },
+      "source": [
+        "**tokenizer_bpe**"
+      ]
     },
     {
       "cell_type": "code",
@@ -105,15 +91,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**lr_scheduler**"
-      ],
       "metadata": {
         "id": "BE8mEurXJi3q"
-      }
+      },
+      "source": [
+        "**lr_scheduler**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {
+        "id": "E1ZdX89WHPov"
+      },
+      "outputs": [],
       "source": [
         "import math\n",
         "\n",
@@ -135,24 +126,24 @@
         "        for g in self.optimizer.param_groups:\n",
         "            g['lr'] = lr\n",
         "        return lr"
-      ],
-      "metadata": {
-        "id": "E1ZdX89WHPov"
-      },
-      "execution_count": 40,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**dataset_bpe**"
-      ],
       "metadata": {
         "id": "lmq8tHg5Jl3y"
-      }
+      },
+      "source": [
+        "**dataset_bpe**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "id": "zy7VB7RUIsME"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -180,24 +171,24 @@
         "def make_loader(path: str, tokenizer: BPETokenizer, block_size: int, batch_size: int, shuffle=True) -> DataLoader:\n",
         "    ds = TextBPEBuffer(path, tokenizer, block_size)\n",
         "    return DataLoader(ds, batch_size=batch_size, shuffle=shuffle, drop_last=True)"
-      ],
-      "metadata": {
-        "id": "zy7VB7RUIsME"
-      },
-      "execution_count": 41,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**amp_accum**"
-      ],
       "metadata": {
         "id": "OpAWTaauJuYK"
-      }
+      },
+      "source": [
+        "**amp_accum**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "id": "PdpKfKLUIyfz"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "\n",
@@ -231,24 +222,24 @@
         "            self.optim.step()\n",
         "    def zero_grad(self):\n",
         "        self.optim.zero_grad(set_to_none=True)"
-      ],
-      "metadata": {
-        "id": "PdpKfKLUIyfz"
-      },
-      "execution_count": 42,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**checkpointing**"
-      ],
       "metadata": {
         "id": "k33SHJDMJzXS"
-      }
+      },
+      "source": [
+        "**checkpointing**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {
+        "id": "BzAOjdO2I4Mz"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import os\n",
@@ -551,24 +542,24 @@
         "            old.unlink(missing_ok=True)\n",
         "    except Exception:\n",
         "        pass"
-      ],
-      "metadata": {
-        "id": "BzAOjdO2I4Mz"
-      },
-      "execution_count": 43,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**logger**"
-      ],
       "metadata": {
         "id": "cswvXe7TKA36"
-      }
+      },
+      "source": [
+        "**logger**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {
+        "id": "H3rd1pqZJAxL"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import time\n",
@@ -732,15 +723,15 @@
         "    if which == 'wandb':\n",
         "        return WBLogger(project='llm-part4')\n",
         "    return NoopLogger()"
-      ],
-      "metadata": {
-        "id": "H3rd1pqZJAxL"
-      },
-      "execution_count": 44,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "uhrTZTkuKlxJ"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -771,15 +762,15 @@
         "        filtered.scatter_(1, sorted_idx, sorted_logits)\n",
         "\n",
         "    return filtered"
-      ],
-      "metadata": {
-        "id": "uhrTZTkuKlxJ"
-      },
-      "execution_count": 45,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {
+        "id": "vxpn692YKx7K"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -829,15 +820,15 @@
         "    out[..., ::2] = xr1\n",
         "    out[..., 1::2] = xr2\n",
         "    return out"
-      ],
-      "metadata": {
-        "id": "vxpn692YKx7K"
-      },
-      "execution_count": 46,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {
+        "id": "8j7_61JWK0gR"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -853,15 +844,15 @@
         "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
         "        rms = x.pow(2).mean(dim=-1, keepdim=True).add(self.eps).sqrt()\n",
         "        return (x / rms) * self.weight"
-      ],
-      "metadata": {
-        "id": "8j7_61JWK0gR"
-      },
-      "execution_count": 47,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {
+        "id": "1h3_SXhJK3Ih"
+      },
+      "outputs": [],
       "source": [
         "import torch.nn as nn\n",
         "\n",
@@ -880,15 +871,15 @@
         "        a = self.w1(x)\n",
         "        b = self.act(self.w2(x))\n",
         "        return self.drop(self.w3(a * b))"
-      ],
-      "metadata": {
-        "id": "1h3_SXhJK3Ih"
-      },
-      "execution_count": 48,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {
+        "id": "Y_dptOYaK61Y"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -927,15 +918,15 @@
         "            self.k = torch.cat([sink_part, tail_k], dim=2)\n",
         "            self.v = torch.cat([sink_val, tail_v], dim=2)\n",
         "        return self.k, self.v"
-      ],
-      "metadata": {
-        "id": "Y_dptOYaK61Y"
-      },
-      "execution_count": 49,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {
+        "id": "8Z90roi3K9Sh"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import math, torch\n",
@@ -1028,15 +1019,15 @@
         "            k_new, v_new = k, v\n",
         "        new_cache = KVCache(k_new, v_new)\n",
         "        return y, new_cache"
-      ],
-      "metadata": {
-        "id": "8Z90roi3K9Sh"
-      },
-      "execution_count": 50,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {
+        "id": "OgL9mN_5K_YY"
+      },
+      "outputs": [],
       "source": [
         "import torch.nn as nn\n",
         "# from rmsnorm import RMSNorm\n",
@@ -1061,15 +1052,15 @@
         "        x = x + a\n",
         "        x = x + self.ffn(self.ln2(x))\n",
         "        return x, kv_cache"
-      ],
-      "metadata": {
-        "id": "OgL9mN_5K_YY"
-      },
-      "execution_count": 51,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {
+        "id": "z6aLPG8MLGda"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -1192,15 +1183,54 @@
         "            idx = torch.cat([idx, next_id], dim=1)\n",
         "\n",
         "        return idx"
-      ],
-      "metadata": {
-        "id": "z6aLPG8MLGda"
-      },
-      "execution_count": 52,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EHfRy2GCJJET",
+        "outputId": "b425f8e7-9ad9-4d45-a4d9-b43cde0d9f24"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[init] Trained tokenizer to runs/part4-demo/tokenizer (vocab=1000)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipython-input-1027849392.py:14: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
+            "  self.scaler = torch.cuda.amp.GradScaler(enabled=self.amp)\n",
+            "/tmp/ipython-input-1748937790.py:31: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
+            "  assert T <= self.block_size\n",
+            "/tmp/ipython-input-3837243272.py:17: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
+            "  need = int(positions.max().item()) + 1 if positions.numel() > 0 else 1\n",
+            "/tmp/ipython-input-3837243272.py:17: TracerWarning: Converting a tensor to a Python number might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
+            "  need = int(positions.max().item()) + 1 if positions.numel() > 0 else 1\n",
+            "/tmp/ipython-input-3837243272.py:38: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
+            "  assert x.size(-1) % 2 == 0\n",
+            "/tmp/ipython-input-449061659.py:184: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "  with torch.cuda.amp.autocast(enabled=amp.amp):\n",
+            "/tmp/ipython-input-3920585331.py:85: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "  with torch.no_grad(), torch.cuda.amp.autocast(enabled=False):\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Saved checkpoint to runs/part4-demo/model_last.pt\n"
+          ]
+        }
+      ],
       "source": [
         "from __future__ import annotations\n",
         "import argparse, time, signal\n",
@@ -1402,6 +1432,9 @@
         "\n",
         "                # logging\n",
         "                if step % 50 == 0:\n",
+        "                    train_loss = float(loss.item())\n",
+        "                    \n",
+        "                 \n",
         "                    logger.log(step=step, loss=float(loss.item()), lr=float(lr))\n",
         "                    _log_runtime(logger, step, it_t0, xb, device)\n",
         "                    _log_model_stats(logger, model, step, do_hists=False)\n",
@@ -1430,57 +1463,11 @@
         "        '--grad_accum_steps', '2',\n",
         "        '--log', 'tensorboard'\n",
         "    ])\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EHfRy2GCJJET",
-        "outputId": "b425f8e7-9ad9-4d45-a4d9-b43cde0d9f24"
-      },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[init] Trained tokenizer to runs/part4-demo/tokenizer (vocab=1000)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1027849392.py:14: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
-            "  self.scaler = torch.cuda.amp.GradScaler(enabled=self.amp)\n",
-            "/tmp/ipython-input-1748937790.py:31: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-            "  assert T <= self.block_size\n",
-            "/tmp/ipython-input-3837243272.py:17: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-            "  need = int(positions.max().item()) + 1 if positions.numel() > 0 else 1\n",
-            "/tmp/ipython-input-3837243272.py:17: TracerWarning: Converting a tensor to a Python number might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-            "  need = int(positions.max().item()) + 1 if positions.numel() > 0 else 1\n",
-            "/tmp/ipython-input-3837243272.py:38: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-            "  assert x.size(-1) % 2 == 0\n",
-            "/tmp/ipython-input-449061659.py:184: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
-            "  with torch.cuda.amp.autocast(enabled=amp.amp):\n",
-            "/tmp/ipython-input-3920585331.py:85: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
-            "  with torch.no_grad(), torch.cuda.amp.autocast(enabled=False):\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saved checkpoint to runs/part4-demo/model_last.pt\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !pip install tensorboard\n"
-      ],
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1488,11 +1475,10 @@
         "id": "Tm3wemHpNf_O",
         "outputId": "a0c6404b-715a-4920-9a3f-40fcfb7b5f79"
       },
-      "execution_count": 57,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: tensorboard in /usr/local/lib/python3.12/dist-packages (2.19.0)\n",
             "Requirement already satisfied: absl-py>=0.4 in /usr/local/lib/python3.12/dist-packages (from tensorboard) (1.4.0)\n",
@@ -1509,32 +1495,52 @@
             "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.12/dist-packages (from werkzeug>=1.0.1->tensorboard) (3.0.3)\n"
           ]
         }
+      ],
+      "source": [
+        "# !pip install tensorboard\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# %load_ext tensorboard\n"
-      ],
+      "execution_count": 58,
       "metadata": {
         "id": "U2UVVIdZORSO"
       },
-      "execution_count": 58,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# %load_ext tensorboard\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# %tensorboard --logdir runs/part4-demo\n"
-      ],
+      "execution_count": 65,
       "metadata": {
         "id": "YOHjUV6_OTZ9"
       },
-      "execution_count": 65,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# %tensorboard --logdir runs/part4-demo\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b4h-nHsdOWWU",
+        "outputId": "61078b7b-e4fe-4877-deb7-c90af087355a"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "जो सुमिरत्रगट तीनान बि न\n"
+          ]
+        }
+      ],
       "source": [
         "from __future__ import annotations\n",
         "import argparse, torch\n",
@@ -1636,33 +1642,30 @@
         "        '--tokens', '10',\n",
         "        '--prompt', 'जो सुमिरत'\n",
         "    ])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "b4h-nHsdOWWU",
-        "outputId": "61078b7b-e4fe-4877-deb7-c90af087355a"
-      },
-      "execution_count": 64,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "जो सुमिरत्रगट तीनान बि न\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "bnP6dUADPupU"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
