--- a/llm_RLHF_part3.ipynb
+++ b/llm_RLHF_part3.ipynb
@@ -1433,7 +1433,8 @@
         "                # logging\n",
         "                if step % 50 == 0:\n",
         "                    train_loss = float(loss.item())\n",
-        "                    \n",
+        "                    print(f\"[step {step}] train_loss={train_loss:.4f}, lr={lr:.6f}\")\n",
+        "\n",
         "                 \n",
         "                    logger.log(step=step, loss=float(loss.item()), lr=float(lr))\n",
         "                    _log_runtime(logger, step, it_t0, xb, device)\n",
