--- a/llm_RLHF_part3.ipynb
+++ b/llm_RLHF_part3.ipynb
@@ -1359,6 +1359,13 @@
         "\n",
         "    # ---- dataset ----\n",
         "    train_loader = make_loader(args.data, tok, args.block_size, args.batch_size, shuffle=True)\n",
+        "    try:\n",
+        "        print(f\"Number of batches in train_loader: {len(train_loader)}\")\n",
+        "        if hasattr(train_loader, \"dataset\"):\n",
+        "            print(f\"Number of samples in dataset: {len(train_loader.dataset)}\")\n",
+        "    except TypeError:\n",
+        "        print(\"train_loader has no __len__ (likely an iterable or streaming dataset).\")\n",
+        "\n",
         "\n",
         "    # ---- build model config ----\n",
         "    if have_ckpt:\n",
