--- a/llm_RLHF_part3.ipynb
+++ b/llm_RLHF_part3.ipynb
@@ -6,7 +6,7 @@
         "id": "3UJZnMdbJbOM"
       },
       "source": [
-        "**Tokenizer BPE**"
+        "**Tokenizer BPE normal**"
       ]
     },
     {
