--- a/llm_RLHF_part3.ipynb
+++ b/llm_RLHF_part3.ipynb
@@ -95,7 +95,7 @@
         "id": "BE8mEurXJi3q"
       },
       "source": [
-        "**lr_scheduler**"
+        "**LR_scheduler**"
       ]
     },
     {
