--- a/llm_RLHF_pt2.ipynb
+++ b/llm_RLHF_pt2.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -40,8 +26,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sTBPfDbp-kNc"
+      },
+      "outputs": [],
       "source": [
-        "from __future__ import annotations\n",
+        "\n",
         "import torch\n",
         "\n",
         "def top_k_top_p_filtering(logits: torch.Tensor, top_k: int | None = None, top_p: float | None = None):\n",
@@ -70,15 +61,15 @@
         "        filtered.scatter_(1, sorted_idx, sorted_logits)\n",
         "\n",
         "    return filtered"
-      ],
-      "metadata": {
-        "id": "sTBPfDbp-kNc"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "nMzePAIS-nbS"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -128,15 +119,15 @@
         "    out[..., ::2] = xr1\n",
         "    out[..., 1::2] = xr2\n",
         "    return out"
-      ],
-      "metadata": {
-        "id": "nMzePAIS-nbS"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "AfyXDK4B-r7K"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -152,15 +143,15 @@
         "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
         "        rms = x.pow(2).mean(dim=-1, keepdim=True).add(self.eps).sqrt()\n",
         "        return (x / rms) * self.weight"
-      ],
-      "metadata": {
-        "id": "AfyXDK4B-r7K"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "IwtOdyjt-uNi"
+      },
+      "outputs": [],
       "source": [
         "import torch.nn as nn\n",
         "\n",
@@ -179,15 +170,15 @@
         "        a = self.w1(x)\n",
         "        b = self.act(self.w2(x))\n",
         "        return self.drop(self.w3(a * b))"
-      ],
-      "metadata": {
-        "id": "IwtOdyjt-uNi"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "XGp0h7To-w-i"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -226,15 +217,15 @@
         "            self.k = torch.cat([sink_part, tail_k], dim=2)\n",
         "            self.v = torch.cat([sink_val, tail_v], dim=2)\n",
         "        return self.k, self.v"
-      ],
-      "metadata": {
-        "id": "XGp0h7To-w-i"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "tEq_2Ut4_FKa"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import math, torch\n",
@@ -327,15 +318,15 @@
         "            k_new, v_new = k, v\n",
         "        new_cache = KVCache(k_new, v_new)\n",
         "        return y, new_cache"
-      ],
-      "metadata": {
-        "id": "tEq_2Ut4_FKa"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "5UByeoDg-2kR"
+      },
+      "outputs": [],
       "source": [
         "import torch.nn as nn\n",
         "# from rmsnorm import RMSNorm\n",
@@ -360,15 +351,15 @@
         "        x = x + a\n",
         "        x = x + self.ffn(self.ln2(x))\n",
         "        return x, kv_cache"
-      ],
-      "metadata": {
-        "id": "5UByeoDg-2kR"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "0jk6I_Gq_riZ"
+      },
+      "outputs": [],
       "source": [
         "import torch.nn as nn\n",
         "\n",
@@ -390,15 +381,15 @@
         "        x = x + a\n",
         "        x = x + self.ffn(self.ln2(x))\n",
         "        return x, kv_cache"
-      ],
-      "metadata": {
-        "id": "0jk6I_Gq_riZ"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "yI7dvzZi-8rB"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import annotations\n",
         "import torch\n",
@@ -521,67 +512,11 @@
         "            idx = torch.cat([idx, next_id], dim=1)\n",
         "\n",
         "        return idx"
-      ],
-      "metadata": {
-        "id": "yI7dvzZi-8rB"
-      },
-      "execution_count": 26,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import argparse, torch\n",
-        "import argparse, torch, sys\n",
-        "\n",
-        "import time\n",
-        "\n",
-        "\n",
-        "def main(argv:None):\n",
-        "    if argv is None:\n",
-        "        argv = sys.argv[1:]\n",
-        "\n",
-        "    p = argparse.ArgumentParser()\n",
-        "    p.add_argument('--rmsnorm', action='store_true')\n",
-        "    p.add_argument('--rope', action='store_true')\n",
-        "    p.add_argument('--swiglu', action='store_true')\n",
-        "    p.add_argument('--sliding_window', type=int, default=None)\n",
-        "    p.add_argument('--sink', type=int, default=0)\n",
-        "    p.add_argument('--group_size', type=int, default=2)\n",
-        "    p.add_argument('--tokens', type=int, default=120)\n",
-        "    p.add_argument('--cpu', action='store_true')\n",
-        "    args = p.parse_args(argv)\n",
-        "\n",
-        "    device = torch.device('cuda' if torch.cuda.is_available() and not args.cpu else 'cpu')\n",
-        "\n",
-        "    tok = ByteTokenizer()\n",
-        "    model = GPTModern(vocab_size=tok.vocab_size, block_size=128, n_layer=2, n_head=4, n_embd=128,\n",
-        "                      use_rmsnorm=args.rmsnorm, use_swiglu=args.swiglu, rope=args.rope,\n",
-        "                      max_pos=4096, sliding_window=args.sliding_window, attention_sink=args.sink, n_kv_head=args.group_size).to(device)\n",
-        "\n",
-        "    # empty prompt → newline\n",
-        "    prompt = torch.tensor([[10]], dtype=torch.long, device=device)\n",
-        "\n",
-        "    with torch.no_grad():\n",
-        "        start = time.time()\n",
-        "        out = model.generate(prompt, max_new_tokens=args.tokens, temperature=0.0, top_k=50, top_p=None,\n",
-        "                              sliding_window=args.sliding_window, attention_sink=args.sink)\n",
-        "        print(f\"Generated {args.tokens} tokens in {time.time()-start:.2f} sec\")\n",
-        "\n",
-        "        start = time.time()\n",
-        "        out_nocache = model.generate_nocache(prompt, max_new_tokens=args.tokens, temperature=0.0, top_k=50, top_p=None,\n",
-        "                              sliding_window=args.sliding_window, attention_sink=args.sink)\n",
-        "        print(f\"(nocache) Generated {args.tokens} tokens in {time.time()-start:.2f} sec\")\n",
-        "    print(tok.decode(out[0].cpu()))\n",
-        "    print(tok.decode(out_nocache[0].cpu()))\n",
-        "\n",
-        "\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "  main([\n",
-        "      '--rmsnorm', '--rope', '--swiglu', '--sliding_window', '64', '--sink', '4', '--tokens', '200'\n",
-        "  ])"
-      ],
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -589,11 +524,10 @@
         "id": "MG9McWYI_Mp5",
         "outputId": "a3e827ed-4c11-4e80-93ea-b7eb5fc3bcaf"
       },
-      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Generated 200 tokens in 0.40 sec\n",
             "top ids: [[231, 175, 176, 174, 173, 172, 171, 170, 169, 162]]\n",
@@ -1003,16 +937,82 @@
             "\"v\b6Gh\u0003\\m{:c\u000214~e^gTe^gTe^gTe^gTe^gTesX\u0015v\u0011{:c\u0002A\u0018ha)Te^gTଝ%[qr\"%[qr\"%[\u001c\u0018h\u0003\\m{:c\u0002A\"%[\u001c\u0018h\u0003\\m{:c\u0002A\u0018h\u0003\\m{:c\u000214~e^gT\n"
           ]
         }
+      ],
+      "source": [
+        "import argparse, torch\n",
+        "import argparse, torch, sys\n",
+        "\n",
+        "import time\n",
+        "\n",
+        "\n",
+        "def main(argv:None):\n",
+        "    if argv is None:\n",
+        "        argv = sys.argv[1:]\n",
+        "\n",
+        "    p = argparse.ArgumentParser()\n",
+        "    p.add_argument('--rmsnorm', action='store_true')\n",
+        "    p.add_argument('--rope', action='store_true')\n",
+        "    p.add_argument('--swiglu', action='store_true')\n",
+        "    p.add_argument('--sliding_window', type=int, default=None)\n",
+        "    p.add_argument('--sink', type=int, default=0)\n",
+        "    p.add_argument('--group_size', type=int, default=2)\n",
+        "    p.add_argument('--tokens', type=int, default=120)\n",
+        "    p.add_argument('--cpu', action='store_true')\n",
+        "    args = p.parse_args(argv)\n",
+        "\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() and not args.cpu else 'cpu')\n",
+        "\n",
+        "    tok = ByteTokenizer()\n",
+        "    model = GPTModern(vocab_size=tok.vocab_size, block_size=128, n_layer=2, n_head=4, n_embd=128,\n",
+        "                      use_rmsnorm=args.rmsnorm, use_swiglu=args.swiglu, rope=args.rope,\n",
+        "                      max_pos=4096, sliding_window=args.sliding_window, attention_sink=args.sink, n_kv_head=args.group_size).to(device)\n",
+        "\n",
+        "    # empty prompt → newline\n",
+        "    prompt = torch.tensor([[10]], dtype=torch.long, device=device)\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        start = time.time()\n",
+        "        out = model.generate(prompt, max_new_tokens=args.tokens, temperature=0.0, top_k=50, top_p=None,\n",
+        "                              sliding_window=args.sliding_window, attention_sink=args.sink)\n",
+        "        print(f\"Generated {args.tokens} tokens in {time.time()-start:.2f} sec\")\n",
+        "\n",
+        "        start = time.time()\n",
+        "        out_nocache = model.generate_nocache(prompt, max_new_tokens=args.tokens, temperature=0.0, top_k=50, top_p=None,\n",
+        "                              sliding_window=args.sliding_window, attention_sink=args.sink)\n",
+        "        print(f\"(nocache) Generated {args.tokens} tokens in {time.time()-start:.2f} sec\")\n",
+        "    print(tok.decode(out[0].cpu()))\n",
+        "    print(tok.decode(out_nocache[0].cpu()))\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  main([\n",
+        "      '--rmsnorm', '--rope', '--swiglu', '--sliding_window', '64', '--sink', '4', '--tokens', '200'\n",
+        "  ])"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ba9VewUh_-f_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
