--- a/llm_RLHF_pt2.ipynb
+++ b/llm_RLHF_pt2.ipynb
@@ -32,7 +32,7 @@
       },
       "outputs": [],
       "source": [
-        "\n",
+        "from __future__ import annotations\n",
         "import torch\n",
         "\n",
         "def top_k_top_p_filtering(logits: torch.Tensor, top_k: int | None = None, top_p: float | None = None):\n",
